<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BgLoggerActivity!</string>
    <string name="app_name">BgLogger</string>
    <string name="plus_button_content_description">Add Record</string>
    <string name="glucose_reading_label">Blood Test Result: </string>
    <string name="glucose_type_label">Test Type: </string>
    <string name="logo_content_description">Logo</string>
    <string name="submit_button_text">Submit</string>
    <string name="add_record_button_text">Add A Record</string>
    <string name="insulin_dosage_label">Dosage</string>
    <string name="insulin_type_label">Insulin Type: </string>
    <string name="insulin_units_label">Units</string>
    <string name="unit_type">Measurement Unit:</string>
    <string name="delete_button_content_description">Delete All Records</string>
    <string name="delete_all_button_text">Delete All Records</string>
    <string name="Alarm">Add New Alarm</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="help_centre">Help Centre</string>
    <string name="help">Help</string>
  	<string name="emergency_calling">Emergency Calling</string>
    <string name="current_location">Current Location</string>  	
  	
    <string name="add_test_result">New Test Result</string>
    
    <string name="food_log">Food Log</string>
    <string name="glycemic_load_list">Glycemic Load List</string>
    <string name="meal_calculator">Meal Calculator</string>
    
    <string name="new_exercise_record">Exercise Record</string>
    <string name="new_medication_record">Medicine Record</string>
    <string name="medicine_history">Medicine History</string>    
    
    <string name="new_insulin_record">Insulin Record</string>    
    
    <string name="meal_report">Meal Report</string>
    <string name="medical_contacts">Medical Contacts</string>
    <string name="new_medical_contact">Medical Contact</string>  
    <string name="notes">Notes</string>
    <string name="new_note">New Note</string>              
    
    <string name="reminder">Reminders</string> 
    <string name="edit_reminder">Edit Reminder</string>   
    <string name="add_new_reminder">New Reminder</string>

	<string name="contacts">Stored Contacts</string>
    <string name="fasting_blood_sugar_report">FBS Graph</string>
	<string name="random_blood_sugar_report">RBS Graph</string>
    <string name="hba1c_report">HBA1C</string>
	
    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="imgdesc">imgdesc</string>
    
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Data Entry</item>
        <item >Data Report</item>
        <item >Echannelling</item>
        <item >Email</item>
        <item >Preferences</item>
        <item >Reminders</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Kept in the order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_data_entry</item>
        <item>@drawable/ic_data_report</item>
        <item>@drawable/ic_echannel</item>
        <item>@drawable/ic_email</item>
        <item>@drawable/ic_preferences</item>
        <item>@drawable/ic_reminders</item>
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
 

</resources>