<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/AddRecordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/plus_button_content_description"
            android:text="@string/add_record_button_text" />
        <Button
            android:id="@+id/DeleteAllButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_button_content_description"
            android:text="@string/delete_all_button_text" />
    </LinearLayout>

    <ListView
        android:id="@+id/glucoseLogListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>