<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_content_description"
                android:src="@drawable/logo" />
        </LinearLayout>

        <DatePicker
            android:id="@+id/BloodGlucoseLogDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </DatePicker>

        <TimePicker
            android:id="@+id/BloodGlucoseLogTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </TimePicker>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ResultTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glucose_type_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/GlucoseTypeSpinner"
                android:layout_width="171dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_button_text" />

            <Button
                android:id="@+id/CancelButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="@android:string/cancel" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bac_dim_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C0000000"
            android:visibility="gone" >
        </RelativeLayout>
    </LinearLayout>

</ScrollView>